# agent

./: .env.example  .gitignore  CONTEXT.md  Dockerfile.coder  README.md  bootstrap.sh  config.example.yaml  debug_subprocess.py  pyproject.toml  test_connection.py
agent/: config.py  cost_tracker.py  diagnostics.py  knowledge.py  main.py  memory.py  orchestrator.py  persona_enforcement.py  personas.py  relevance.py  router.py  sanitizer.py  session_store.py  skills.py  state_ledger.py  status_server.py  subagent_runner.py
agent/adapters/: base.py  cli.py  discord.py  telegram.py  vision_discord.py
agent/providers/: __init__.py  anthropic.py  base.py  claude_cli.py  google.py  openai.py  resilient.py  vision.py
agent/tools/: bash.py  file_ops.py  web_browser.py  web_fetch.py
knowledge/: 3d-web.md  ai-image-shortfalls.md  crown-game.md  sprite-generation.md
personas/: README.md
skills/code-reviewer/: SKILL.md
skills/code-writer/: SKILL.md
skills/deploy-agent/: SKILL.md
skills/name/: SKILL.md
skills/reviewer/: SKILL.md
skills/run-tests/: SKILL.md
systemd/: agent.service
tests/: conftest.py  test_case_insensitive.py  test_delegation_pipeline.py  test_knowledge.py  test_memory.py  test_persona_enforcement.py  test_resilient_provider.py  test_router.py  test_sanitizer.py  test_session_store.py  test_state_ledger.py  test_subagent_runner.py
tools/: sprite_gen.py
